force-app/main/default/objects/Order/fields/Delivery_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Risk_Score__c</fullName>
    <defaultValue>0</defaultValue>
    <description>납기 위험 점수 0~100. FR-ORDER-003. ≥70 빨강 / 40~69 노랑 / 미만 녹색.</description>
    <label>납기 위험 점수</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>