force-app/main/default/objects/Order/fields/ERP_Delay_Reason__c.field-meta.xml
<CustomField>
    <fullName>ERP_Delay_Reason__c</fullName>
    <description>ERP 측이 보고한 지연 사유 (한국어). 미생산/미출고/출고 보류/재계획 등. D38 Phase 2.</description>
    <inlineHelpText>ERP 동기화 시 받은 지연 사유. 사전 통보 메일·시연 narrative 에 활용.</inlineHelpText>
    <label>ERP 지연 사유</label>
    <length>80</length>
    <type>Text</type>
</CustomField>