force-app/main/default/objects/Order/fields/Last_ErpSync_At__c.field-meta.xml
<CustomField>
    <fullName>Last_ErpSync_At__c</fullName>
    <description>ERP Mock 마지막 동기화 시각. Day 8 OrderErpSyncService 가 갱신. null 이면 미동기화.</description>
    <label>최근 ERP 동기화</label>
    <type>DateTime</type>
</CustomField>