force-app/main/default/objects/Order/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>거래(Opportunity) 연결. 이 Org는 표준 Order.OpportunityId 미활성화 상태라 custom lookup 으로 대체. Won_To_Order Flow 가 채움.</description>
    <label>거래</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>주문</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>