force-app/main/default/objects/Order/fields/Outstanding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Amount__c</fullName>
    <description>미수 잔액 (TotalAmount - 누적 입금액). FR-AR-001. Order는 Master-Detail 가 아니어서 Roll-Up Summary 불가 → Apex 가 Total_Paid_Amount__c 를 갱신하고 본 Formula 가 차감.</description>
    <formula>NULLVALUE(TotalAmount, 0) - NULLVALUE(Total_Paid_Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>미수 잔액</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>