force-app/main/default/objects/Order/fields/Production_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Production_End_Date__c</fullName>
    <description>생산 종료일 (ERP Mock).</description>
    <label>생산 종료일</label>
    <type>Date</type>
</CustomField>