force-app/main/default/objects/Order/fields/Production_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Production_Start_Date__c</fullName>
    <description>생산 시작일 (ERP Mock).</description>
    <label>생산 시작일</label>
    <type>Date</type>
</CustomField>