force-app/main/default/objects/Order/fields/Production_Status__c.field-meta.xml
<CustomField>
    <fullName>Production_Status__c</fullName>
    <description>생산 상태. ERP Mock 동기화 + AE 수동 출고 등록. FR-ORDER-002/006.</description>
    <label>생산 상태</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>대기</label>
            </value>
            <value>
                <fullName>InProgress</fullName>
                <label>진행중</label>
            </value>
            <value>
                <fullName>Done</fullName>
                <label>완료</label>
            </value>
            <value>
                <fullName>Shipped</fullName>
                <label>출고완료</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>