force-app/main/default/objects/Order/fields/Shipped_Date__c.field-meta.xml
<CustomField>
    <fullName>Shipped_Date__c</fullName>
    <description>AE 수동 입력 출고일. FR-ORDER-006. 입금 추적 시작점.</description>
    <label>출고일</label>
    <type>Date</type>
</CustomField>