force-app/main/default/objects/Order/fields/Total_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>누적 입금액 (KRW). PaymentService(Day 9)가 갱신. Outstanding_Amount__c Formula 의 피연산자. Order는 Master-Detail 가 아니므로 Roll-Up Summary 불가 → Apex 누적 방식 채택.</description>
    <label>누적 입금액</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>